err/spasmoidal.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/spasmoidal'...
Listing './lib/python3.5/site-packages/spasmoidal/examples'...
Listing './lib/python3.5/site-packages/spasmoidal/examples/echo'...
Compiling './lib/python3.5/site-packages/spasmoidal/examples/echo/echo_client.py'...
***   File "./lib/python3.5/site-packages/spasmoidal/examples/echo/echo_client.py", line 77
    except socket.error, message:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spasmoidal/examples/echo/echo_handler.py'...
***   File "./lib/python3.5/site-packages/spasmoidal/examples/echo/echo_handler.py", line 93
    except EchoHandlerDisconnectError, message:
                                     ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spasmoidal/spasmodic_periodic_logger.py'...
***   File "./lib/python3.5/site-packages/spasmoidal/spasmodic_periodic_logger.py", line 76
    except Exception, message:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spasmoidal/spasmodic_pollster.py'...
***   File "./lib/python3.5/site-packages/spasmoidal/spasmodic_pollster.py", line 80
    except select.error, error:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/spasmoidal/spasmodic_socket_acceptor.py'...
***   File "./lib/python3.5/site-packages/spasmoidal/spasmodic_socket_acceptor.py", line 87
    except socket.error, message:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/spasmoidal-0.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
